[project]
name = "mqtt-simulator"
version = "0.1.0"
description = "A lightweight, easy-to-configure MQTT simulator written in Python 3 for publishing JSON objects to a broker, simulating sensors and devices."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "paho-mqtt==2.1.0",
    "pydantic==2.11.5",
]
